[gd_scene load_steps=16 format=2]

[ext_resource path="res://audio/sfx/items/koopa/smw_kick.ogg" type="AudioStream" id=1]
[ext_resource path="res://actors/items/koopa/koopa.gd" type="Script" id=2]
[ext_resource path="res://actors/items/koopa/koopa_walk.png" type="Texture" id=3]
[ext_resource path="res://src/global/dejitter.gd" type="Script" id=4]

[sub_resource type="AtlasTexture" id=1]
atlas = ExtResource( 3 )
region = Rect2( 0, 0, 22, 35 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 3 )
region = Rect2( 22, 0, 22, 35 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 3 )
region = Rect2( 44, 0, 22, 35 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 3 )
region = Rect2( 66, 0, 22, 35 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 3 )
region = Rect2( 88, 0, 22, 35 )

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 3 )
region = Rect2( 110, 0, 22, 35 )

[sub_resource type="SpriteFrames" id=7]
animations = [ {
"frames": [ SubResource( 1 ), SubResource( 2 ), SubResource( 3 ), SubResource( 4 ), SubResource( 5 ), SubResource( 6 ) ],
"loop": true,
"name": "walk",
"speed": 8.0
} ]

[sub_resource type="RectangleShape2D" id=8]
extents = Vector2( 11, 16.5 )

[sub_resource type="RectangleShape2D" id=9]
extents = Vector2( 11, 8 )

[sub_resource type="RectangleShape2D" id=10]
extents = Vector2( 5, 14.5 )

[sub_resource type="RectangleShape2D" id=11]
extents = Vector2( 1, 1 )

[node name="Koopa" type="KinematicBody2D"]
collision_layer = 4
script = ExtResource( 2 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 7 )
animation = "walk"
script = ExtResource( 4 )

[node name="KinematicShape" type="CollisionShape2D" parent="."]
position = Vector2( 0, 0.5 )
shape = SubResource( 8 )

[node name="RayCast2D" type="RayCast2D" parent="."]
position = Vector2( 9, 0 )
enabled = true
cast_to = Vector2( 0, 35 )

[node name="TopCollision" type="Area2D" parent="."]
position = Vector2( 0, -14 )
collision_layer = 0
collision_mask = 2
input_pickable = false
monitorable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="TopCollision"]
position = Vector2( 0, 6 )
shape = SubResource( 9 )
one_way_collision = true

[node name="Kick" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 1 )
bus = "SFX"

[node name="Damage" type="Area2D" parent="."]
position = Vector2( 0, 2.5 )
collision_layer = 0
collision_mask = 2
input_pickable = false
monitorable = false

[node name="Collision" type="CollisionShape2D" parent="Damage"]
shape = SubResource( 10 )

[node name="WaterCheck" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 8
input_pickable = false
monitorable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="WaterCheck"]
shape = SubResource( 11 )

[connection signal="body_entered" from="TopCollision" to="." method="_on_TopCollision_body_entered"]
[connection signal="finished" from="Kick" to="." method="_on_Kick_finished"]
[connection signal="body_entered" from="Damage" to="." method="_on_Damage_body_entered"]
[connection signal="area_entered" from="WaterCheck" to="." method="_on_WaterCheck_area_entered"]
[connection signal="area_exited" from="WaterCheck" to="." method="_on_WaterCheck_area_exited"]
